fix margin being too high

--- a/styles.css
+++ b/styles.css
@@ -182,7 +182,7 @@ header a:hover {
 }
 /* Editor windows */
 .CodeMirror.cm-s-default {
-    margin: 1rem 0 3rem 0;
+    margin: 1rem 0 2rem 0;
     padding: 0.2rem;
     height: 303px;
     width: 100%;
